--- a/.github/workflows/xrayMaven.yml
+++ b/.github/workflows/xrayMaven.yml
@@ -23,7 +23,7 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn clean compile test --file pom.xml
+      run: mvn -B package --file pom.xml
     - name: "Import results to Xray"
       uses: mikepenz/xray-action@v2.3.1
       with:
