--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <cucumber.version>6.0.0</cucumber.version>
-        <junit.version>4.12</junit.version>
-        <selenium.version>3.141.59</selenium.version>
+        <junit.version>5.8.2</junit.version>
+        <selenium.version>4.1.3</selenium.version>
         <javadoc.version>3.2.0</javadoc.version>
         <slf4j.version>1.7.36</slf4j.version>
         <test.groups>run</test.groups>
@@ -37,13 +37,24 @@
             <version>${cucumber.version}</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
             <version>${junit.version}</version>
         </dependency>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-api</artifactId>
+            <version>${selenium.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
+            <version>${selenium.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-remote-driver</artifactId>
             <version>${selenium.version}</version>
         </dependency>
         <dependency>
