--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,13 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-    - run: chrome --version
+    - name: Install Edge on Linux
+      run: |
+        curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > microsoft.gpg
+        sudo install -o root -g root -m 644 microsoft.gpg /etc/apt/trusted.gpg.d/
+        sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/edge stable main" > /etc/apt/sources.list.d/microsoft-edge-dev.list'
+        sudo rm microsoft.gpg
+        sudo apt update && sudo apt install microsoft-edge-stable
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Test Reporter
