Remove testExecKey: "TEST-2194" and add combineInSingleTestExec: "true"

--- a/.github/workflows/xrayMaven.yml
+++ b/.github/workflows/xrayMaven.yml
@@ -31,5 +31,5 @@ jobs:
         password: ${{ secrets.CLIENT_SECRET }}
         testFormat: "junit"
         testPaths: "**/cucumber-reports/cucumber-results.xml"
-        testExecKey: TEST-2194
-        projectKey: TEST
+        projectKey: "TEST"
+        combineInSingleTestExec: "true"
