--- a/.github/workflows/xrayMaven.yml
+++ b/.github/workflows/xrayMaven.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Java CI with Maven
+name: Import test result in Jira
 
 on:
   push:
@@ -25,11 +25,10 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: "Import results to Xray"
-      uses: mikepenz/xray-action@v2.3.1
+      uses: mikepenz/xray-action@v0.9.4
       with:
         username: ${{ secrets.CLIENT_ID }}
         password: ${{ secrets.CLIENT_SECRET }}
         testFormat: "junit"
-        testPaths: "**/cucumber-reports/cucumber-results.xml"
+        testPaths: "**/surefire-reports/*.xml"
         projectKey: "TEST"
-        combineInSingleTestExec: "true"
