--- a/.github/workflows/xrayMaven.yml
+++ b/.github/workflows/xrayMaven.yml
@@ -27,8 +27,8 @@ jobs:
     - name: "Import results to Xray"
       uses: mikepenz/xray-action@v0.9.4
       with:
-        username: ${{ secrets.CLIENT_ID }}
-        password: ${{ secrets.CLIENT_SECRET }}
+        username: "777348BEB0534B95A30B629FC2A7B5E7"
+        password: "b5fa005ffaf50b3d23d6e3176a52293094c7030c47ad18b7797e88bf08371d05"
         testFormat: "junit"
         testPaths: "**/surefire-reports/*.xml"
         projectKey: "TEST"
