Update username and password, update version to 2.2.2

--- a/.github/workflows/xrayMaven.yml
+++ b/.github/workflows/xrayMaven.yml
@@ -25,10 +25,10 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: "Import results to Xray"
-      uses: mikepenz/xray-action@v2.2.1
+      uses: mikepenz/xray-action@v2.2.2
       with:
-        username: "777348BEB0534B95A30B629FC2A7B5E7"
-        password: "b5fa005ffaf50b3d23d6e3176a52293094c7030c47ad18b7797e88bf08371d05"
+        username: ${{ secrets.CLIENT_ID }}
+        password: ${{ secrets.CLIENT_SECRET }}
         testFormat: "junit"
         testPaths: "**/surefire-reports/*.xml"
         projectKey: "TEST"
