--- a/.github/workflows/xrayMaven.yml
+++ b/.github/workflows/xrayMaven.yml
@@ -30,5 +30,5 @@ jobs:
         username: ${{ secrets.CLIENT_ID }}
         password: ${{ secrets.CLIENT_SECRET }}
         testFormat: "cucumber"
-        testPaths: "**/cucumber.json"
+        testPaths: "**/cucumber-results.xml"
         projectKey: "TEST"
