--- a/.github/workflows/xrayMaven.yml
+++ b/.github/workflows/xrayMaven.yml
@@ -22,13 +22,22 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
+    - name: Cache Maven packages
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn clean compile test --file pom.xml
     - name: "Import results to Xray"
-      uses: mikepenz/xray-action@v2.2.2
+      uses: mikepenz/xray-action@v0.9.4
       with:
         username: ${{ secrets.CLIENT_ID }}
         password: ${{ secrets.CLIENT_SECRET }}
-        testFormat: "cucumber"
-        testPaths: "**/cucumber-results.xml"
+        #xrayBaseUrl: "https://swfs.atlassian.net"
+        #testFormat: "cucumber"
+        #testPaths: "**/cucumber-results.xml"
+        testFormat: "junit"
+        testPaths: "**/surefire-reports/*.xml"
         projectKey: "TEST"
